--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,3 +67,28 @@ jobs:
           release_name: ${{ steps.get_version.outputs.VERSION }}
           tag_name: ${{ steps.get_version.outputs.VERSION }}
           draft: false
+
+    build:
+       needs: release
+       runs-on: ubuntu-latest
+       steps:
+
+       - name: Checkout
+         uses: actions/checkout@v2
+
+       - name: Login to Docker Hub
+         uses: docker/login-action@v1
+         with:
+           username: ${{ secrets.DOCKER_HUB_USERNAME }}
+           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+       - name: Set up Docker Buildx
+         uses: docker/setup-buildx-action@v1
+
+       - name: Build and Push
+         uses: docker/build-push-action@v2
+         with:
+           context: .
+           file: ./Dockerfile
+           push: true
+           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/json2qgs:latest
