--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
        steps:
 
        - name: Checkout
-         uses: actions/checkout@v2
+         uses: actions/checkout@master
 
        - name: Login to Docker Hub
          uses: docker/login-action@v1
@@ -91,4 +91,4 @@ jobs:
            context: .
            file: ./Dockerfile
            push: true
-           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/json2qgs:latest
+           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/json2qgs:${{ steps.get_version.outputs.VERSION }}
