--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,9 +68,12 @@ jobs:
           tag_name: ${{ steps.get_version.outputs.VERSION }}
           draft: false
 
+      outputs:
+        
+
     build:
        needs: release
-       runs-on: ubuntu-latest
+       runs-on: ubuntu-latest, "${{ release.steps.get_version.outputs.VERSION }}"
        steps:
 
        - name: Checkout
@@ -91,4 +94,4 @@ jobs:
            context: .
            file: ./Dockerfile
            push: true
-           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/json2qgs:${{ steps.get_version.outputs.VERSION }}
+           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/json2qgs:${{ release.steps.get_version.outputs.VERSION }}
