added outputs to release

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,8 @@ jobs:
           release_name: ${{ steps.get_version.outputs.VERSION }}
           tag_name: ${{ steps.get_version.outputs.VERSION }}
           draft: false
+      output:
+        VERSION: ${{ steps.get_version.outputs.VERSION }}
 
     build:
        needs: release
